# operation-agent

./: .dockerignore  .env.example  .gitignore  .mcp.json  CLAUDE.md  Dockerfile  README.md  lefthook.yml  pyproject.toml  sample.py  slack_app_manifest.json  test_agentcore.py
.claude/: settings.json
.claude/hooks/: post-python-lint.sh  pre-block-destructive.sh  pre-protect-config.sh  stop-test.sh
.github/workflows/: ci.yml
infra/: app.py  cdk.json  requirements.txt
infra/stacks/: operation_agent_stack.py  slack_bot_stack.py
scripts/: deploy.sh  deploy_bedrock.sh  deploy_slack.sh
src/diagnosis/: __main__.py  agent.py  config.py  prompts.py  telemetry.py
src/diagnosis/tools/: __init__.py  cwl_insights.py  mysql_query.py  notion_get_page.py  notion_search.py
src/operation_agent/: __main__.py  agent.py  config.py  prompt.md  prompts.py
src/operation_agent/tools/: __init__.py  current_time.py  cwl_insights.py  notion_get_page.py  notion_search.py
src/slack_bot/: agent_client.py  app.py  handler.py
tests/: conftest.py  test_setup.py
tests/diagnosis/: test_agent.py  test_config.py  test_prompts.py  test_server.py  test_telemetry.py
tests/diagnosis/tools/: test_current_time.py  test_cwl_insights.py  test_mysql_query.py  test_notion_get_page.py  test_notion_search.py
tests/infra/: test_operation_agent_stack.py  test_slack_bot_stack.py
tests/operation_agent/: test_agent.py  test_config.py  test_prompts.py  test_server.py
tests/operation_agent/tools/: test_current_time.py  test_cwl_insights.py  (+2 more)
tests/slack_bot/: test_agent_client.py  test_app.py
